--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "xianxia-title-gen",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/EvilMonark/Xianxia-title-gen/issues"
   },
-  "homepage": "https://github.com/EvilMonark/Xianxia-title-gen#readme"
+  "homepage": "https://github.com/EvilMonark/Xianxia-title-gen#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.14.6"
+  }
 }
